--- a/src/app/dashboard-login-p/dashboard-login-p.component.html
+++ b/src/app/dashboard-login-p/dashboard-login-p.component.html
@@ -1,3 +1,8 @@
-<p>
-  dashboard-login-p works!
-</p>
+<div class=" row StaticLoggedOutHomePage-content">
+  <div class="col-md-6 StaticLoggedOutHomePage-cell">
+    djkhfjdh
+  </div>
+  <div class="col-md-6 StaticLoggedOutHomePage-cell">
+    djkdjsdk
+  </div>
+</div>
