--- a/src/app/dashboard-login-p/dashboard-login-p.component.html
+++ b/src/app/dashboard-login-p/dashboard-login-p.component.html
@@ -1,8 +1,70 @@
-<div class=" row StaticLoggedOutHomePage-content">
-  <div class="col-md-6 StaticLoggedOutHomePage-cell">
-    djkhfjdh
+<div class=" row" style="width:100%;height: 560px;">
+  <div class="col-md-6 cssD StaticLoggedOutHomePage-communicationBlock">
+    <p><i class="fas fa-search" style="margin-right: 10px;"></i>Sigue lo que te interesa</p>
+    <p><i class="far fa-user" style="margin-right: 10px;"></i>Entérate de lo que está hablando la gente</p>
+    <p><i class="far fa-comment" style="margin-right: 10px;"></i>Únete a la conversación</p>
   </div>
-  <div class="col-md-6 StaticLoggedOutHomePage-cell">
-    djkdjsdk
+  <div class="col-md-6 ">
+     
+          <div class="form-row align-items-center">
+            <div class="col-sm-3 my-1">
+              <input [(ngModel)]="correo" type="text" class="form-control" id="inlineFormInputName" placeholder="Correo electrónico">
+            </div>
+            <div class="col-sm-3 my-1">
+              <div class="input-group">
+                <input [(ngModel)]="pass" type="password" class="form-control" id="inlineFormInputGroupUsername" placeholder="Contraseña" style="margin-top: 18px;">
+                <small>¿Olvidaste tu contraseña</small>
+              </div>
+            </div>
+            <div class="col-auto my-1">
+              <button  (click)="login()" Type="submit" class="EdgeButton EdgeButton--secondary EdgeButton--small">Iniciar sesión</button>
+            </div>
+          </div>
+          <div class="container cssDCon">
+              <img src="/assets/img/icono twitter.jpg" class="cssIconT">
+          <h4 style=" font-family: fantasy;">Mira lo que está pasando en el mundo en este momento</h4>
+          <small style=" font-family: fantasy;">Únete a Twitter hoy mismo</small>
+          <div class="col-auto my-1">
+              <button  (click)="login()" Type="submit" class="EdgeButton EdgeButton--secondary EdgeButton--small">Registrate</button>
+            </div>
+          </div>
+
+
+      <!--<div class="form-group">
+          <input type="text" class="form-control" name="username" placeholder="Teléfono,correo electrónico o username">
+      </div>
+      <div class="form-group">
+          <input type="text" class="form-control" name="password" placeholder="Contraseña">
+          <small>¿Olvidaste tu contraseña</small>
+      </div>
+      <button type="submit" class="btn btn-default">Iniciar sesión</button>-->
   </div>
 </div>
+
+<!-- Footer -->
+<footer class="page-footer font-small blue">
+
+    <!-- Copyright -->
+    <div class="text-center py-3">
+      <a   class="cssA" href="https://mdbootstrap.com/bootstrap-tutorial/">Acerca de</a>
+      <a   class="cssA" href="https://mdbootstrap.com/bootstrap-tutorial/">Centro de apoyo</a>
+      <a   class="cssA" href="https://mdbootstrap.com/bootstrap-tutorial/">Blog</a>
+      <a   class="cssA" href="https://mdbootstrap.com/bootstrap-tutorial/">Estado</a>
+      <a   class="cssA" href="https://mdbootstrap.com/bootstrap-tutorial/">Trabajos</a>
+      <a   class="cssA" href="https://mdbootstrap.com/bootstrap-tutorial/">Términos</a>
+      <a   class="cssA" href="https://mdbootstrap.com/bootstrap-tutorial/">Política de privacidad</a>
+      <a   class="cssA" href="https://mdbootstrap.com/bootstrap-tutorial/">Cookies</a>
+      <a   class="cssA" href="https://mdbootstrap.com/bootstrap-tutorial/">Información de anuncios</a>
+      <a   class="cssA" href="https://mdbootstrap.com/bootstrap-tutorial/">Marca</a>
+      <a   class="cssA" href="https://mdbootstrap.com/bootstrap-tutorial/">Publicar anuncios</a>
+      <a   class="cssA" href="https://mdbootstrap.com/bootstrap-tutorial/">Marketing</a>
+      <a class="cssA"  href="https://mdbootstrap.com/bootstrap-tutorial/">Empresas</a>
+      <a   class="cssA" href="https://mdbootstrap.com/bootstrap-tutorial/">Desarrolladores</a>
+      <a class="cssA"  href="https://mdbootstrap.com/bootstrap-tutorial/">Guía</a>
+      <a class="cssA"  href="https://mdbootstrap.com/bootstrap-tutorial/">Configuración</a>
+      <a class="cssA"  href="https://mdbootstrap.com/bootstrap-tutorial/">Copyright © 2018 Twitter,Inc.</a> 
+    </div>
+    <!-- Copyright -->
+  
+  </footer>
+  <!-- Footer -->
