Navbar avance home

--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -1,3 +1,56 @@
-<p>
-  feed works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <div class="row">
+        <div class="col-md-12">
+
+        </div>
+        <div class="col-md-12">
+
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6 justify-content-md-center">
+      <div class="row">
+        <div class="col-12 timeline-tweet-box">
+          <div class=" row tweet-user">
+            <div class="col-1">
+              <img class=" top-timeline-tweet-box-user-image avatar size32" src="https://pbs.twimg.com/profile_images/466949235628187650/XR2OhG_Z_normal.jpeg"
+                alt="Kriztian">
+            </div>
+            <div class="col-11">
+              <textarea style="width: 100%"></textarea>
+              <div class="row">
+                <div>
+                    <span><i class="far fa-image"></i></span>
+                    <span><i class="fas fa-grin-tongue-wink"></i></span>
+                    <span><i class="fas fa-align-left"></i></span>
+                    <span><i class="fas fa-map-marker-alt"></i></span>
+                </div>
+                <div class="col align-self-end">
+                  <button>Tweet</button>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+        <div class="col-12">
+          <ol>
+            twts
+          </ol>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="row">
+        <div class="col-md-12">
+
+        </div>
+        <div class="col-md-12">
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
