Se agrega contenido al componente de usuario

--- a/src/app/usuario/usuario.component.html
+++ b/src/app/usuario/usuario.component.html
@@ -1,3 +1,75 @@
-<p>
-  usuario works!
-</p>
+<div class=" row backgroundColor headerWidth">
+</div>
+<div class="row">
+    <div class="col-md-4 alignRight">
+        Lists
+    </div>
+    <div class="col-md-1">
+        Moments
+    </div>
+    <div class="col-md-5 invisible">
+        dd
+    </div>
+    <button type="button" class="col-md-1 btn btn-primary">
+        Edit Profile
+    </button>
+</div>
+<div class="row">
+    <div class="col-md-4 alignRight">
+        0
+    </div>
+    <div class="col-md-1">
+        0
+    </div>
+</div>
+<div class="container-fluid colorDeFondo">
+    <div class="row">
+        <div class="col-3">
+            Diego Falcón
+        </div>
+        <div class="col-md-7">
+            <h2>Send Your First Tweet</h2>
+            <div class="row">
+                <div class="col-md-12 mb-3">We've got your first Tweet ready to go. 
+                    The hashtag #myfirstTweet will help others find and chat with you.
+                    <div class="row">
+                            <div class="col-12 my-3 p-3 bg-white rounded box-shadow">
+                                    <div class="col-md-10 mb-3 media text-muted pt-3">
+                                      <img data-src="holder.js/32x32?theme=thumb&bg=e83e8c&fg=e83e8c&size=1" alt="" class="mr-2 rounded">
+                                      <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+                                        <strong class="d-block text-gray-dark">@username</strong>
+                                        Just setting of my twitter #myfirstTweet
+                                      </p>
+                                      <button class="col-md-2 btn btn-primary">Tweet</button>
+                                    </div>
+                                    <div class="col-md-10 mb-3 media text-muted pt-3">
+                                      <img data-src="holder.js/32x32?theme=thumb&bg=6f42c1&fg=6f42c1&size=1" alt="" class="mr-2 rounded">
+                                      <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+                                        <strong class="d-block text-gray-dark">@username</strong>
+                                        Hello Twitter! #myfirstTweet
+                                      </p>
+                                      <button class="col-md-2 btn btn-primary">Tweet</button>
+                                    </div>
+                            </div>
+                            <div>Or write your own</div>
+                            <div class="container colorFondoTextBox">
+                                <div class="row col-md-12">
+                                    <div class="row col-md-12">
+                                        <div class="input-group mb-3 textBox">
+                                        <div class="input-group-prepend">
+                                        <div class="input-group-text">
+                                            <input type="checkbox" aria-label="Checkbox for following text input">
+                                        </div>
+                                        </div>
+                                        <input type="text" class="form-control" aria-label="Text input with checkbox">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
