Componente Perfil, final

--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -1,88 +1,103 @@
-
-<div class="container">
-  <div class="row">
-  <div class="col-md-5  toppad  pull-right col-md-offset-3 ">
-       <A href="edit.html" >Edit Profile</A>
-
-    <A href="edit.html" >Logout</A>
-   <br>
-<p class=" text-info">May 05,2014,03:00 pm </p>
-  </div>
-    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-3 col-lg-offset-3 toppad" >
-
-
-      <div class="panel panel-info">
-        <div class="panel-heading">
-          <h3 class="panel-title">Sheena Shrestha</h3>
-        </div>
-        <div class="panel-body">
-          <div class="row">
-            <div class="col-md-3 col-lg-3 " align="center"> <img alt="User Pic" src="http://babyinfoforyou.com/wp-content/uploads/2014/10/avatar-300x300.png" class="img-circle img-responsive"> </div>
-            
-            <!--<div class="col-xs-10 col-sm-10 hidden-md hidden-lg"> <br>
-              <dl>
-                <dt>DEPARTMENT:</dt>
-                <dd>Administrator</dd>
-                <dt>HIRE DATE</dt>
-                <dd>11/12/2013</dd>
-                <dt>DATE OF BIRTH</dt>
-                   <dd>11/12/2013</dd>
-                <dt>GENDER</dt>
-                <dd>Male</dd>
-              </dl>
-            </div>-->
-            <div class=" col-md-9 col-lg-9 "> 
-              <table class="table table-user-information">
-                <tbody>
-                  <tr>
-                    <td>Department:</td>
-                    <td>Programming</td>
-                  </tr>
-                  <tr>
-                    <td>Hire date:</td>
-                    <td>06/23/2013</td>
-                  </tr>
-                  <tr>
-                    <td>Date of Birth</td>
-                    <td>01/24/1988</td>
-                  </tr>
-               
-                     <tr>
-                         <tr>
-                    <td>Gender</td>
-                    <td>Female</td>
-                  </tr>
-                    <tr>
-                    <td>Home Address</td>
-                    <td>Kathmandu,Nepal</td>
-                  </tr>
-                  <tr>
-                    <td>Email</td>
-                    <td><a href="mailto:info@support.com">info@support.com</a></td>
-                  </tr>
-                    <td>Phone Number</td>
-                    <td>123-4567-890(Landline)<br><br>555-4567-890(Mobile)
-                    </td>
-                       
-                  </tr>
-                 
-                </tbody>
-              </table>
-              
-              <a href="#" class="btn btn-primary">My Sales Performance</a>
-              <a href="#" class="btn btn-primary">Team Sales Performance</a>
-            </div>
-          </div>
-        </div>
-             <div class="panel-footer">
-                    <a data-original-title="Broadcast Message" data-toggle="tooltip" type="button" class="btn btn-sm btn-primary"><i class="glyphicon glyphicon-envelope"></i></a>
-                    <span class="pull-right">
-                        <a href="edit.html" data-original-title="Edit this user" data-toggle="tooltip" type="button" class="btn btn-sm btn-warning"><i class="glyphicon glyphicon-edit"></i></a>
-                        <a data-original-title="Remove this user" data-toggle="tooltip" type="button" class="btn btn-sm btn-danger"><i class="glyphicon glyphicon-remove"></i></a>
-                    </span>
-                </div>
-        
-      </div>
+<body class="bg-light">
+  <div class="container-fluid">
+    <div class="heatherImg">
+      <img src="..." alt="header" id="headerImg">
+      <input type="file" name="pic" accept="image/*">
     </div>
   </div>
-</div>
+  <br>
+  <br>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 f2">
+        <div class="row justify-content-center">          
+          <div class="container UP">
+              <img class="rounded-circle bor" src="http://via.placeholder.com/200x200" alt="imgPerfil" width="200" height="200">
+              <div class="card-body">
+              <a href="#" class="btn btn-primary boton1" type="input">Cambiar Imagen</a>
+              </div>
+            </div>
+          </div>
+
+      </div>
+      <div class="col-md-6 order-md-1 ">
+        <h2 class="mb-3">Perfil de Usuario</h2>
+        <form class="needs-validation" novalidate>
+          <div class="row">
+            <div class="col-md-6 mb-3">
+              <input type="text" class="form-control" id="nombre" placeholder="Nombre" value="" required>
+              <div class="invalid-feedback">
+                Valid first name is required.
+              </div>
+            </div>
+            <div class="col-md-6 mb-3">
+              <input type="text" class="form-control" id="bio" placeholder="Bio" value="" required>
+              <div class="invalid-feedback">
+                Valid first name is required.
+              </div>
+            </div>
+          </div>
+          <div class="mb-3">
+            <input type="url" class="form-control" id="firstName" placeholder="Website" value="" required>
+            <div class="invalid-feedback">
+              Valid first name is required.
+            </div>
+          </div>
+          <div class="mb-3">
+            <fieldset disabled>
+              <div class="input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text">@</span>
+                </div>
+                <input type="text" class="form-control" id="username disabled" placeholder="Username" required>
+                <div class="invalid-feedback" style="width: 100%;">
+                  Your username is required.
+                </div>
+              </div>
+            </fieldset>
+          </div>
+
+          <div class="mb-3">
+            <fieldset disabled>
+              <input type="email" class="form-control" id="email" placeholder="you@example.com">
+              <div class="invalid-feedback">
+                Please enter a valid email address for shipping updates.
+              </div>
+            </fieldset>
+          </div>
+          <div class="mb-3">
+            <input type="text" class="form-control" id="firstName" placeholder="Ciudad" value="" required>
+            <div class="invalid-feedback">
+              Valid first name is required.
+            </div>
+          </div>
+          <div class="mb-3">
+            <input type="date" class="form-control" id="firstName" placeholder="Fecha de Nacimiento" value="" required>
+            <div class="invalid-feedback">
+              Valid first name is required.
+            </div>
+          </div>
+
+
+          <hr class="mb-4">
+          <button class="btn btn-primary btn-lg btn-block boton1" type="submit">Guardar</button>
+        </form>
+      </div>
+    </div>
+    
+    <footer class="my-5 pt-5 text-muted text-center text-small">
+      <p class="mb-1">&copy; Twitter / Digital HUB / Equipo 3</p>
+      <ul class="list-inline">
+        <li class="list-inline-item">
+          <a href="#" class="fA">Privacy</a>
+        </li>
+        <li class="list-inline-item">
+          <a href="#" class="fA">Terms</a>
+        </li>
+        <li class="list-inline-item">
+          <a href="#" class="fA">Support</a>
+        </li>
+      </ul>
+    </footer>
+  </div>
+</body>
