Funcionamiento del componente perfil listo, sus servicios y se modifico el html del componente

--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -54,3 +54,10 @@
     </div>
   </div>
 </div>
+
+<!--NOTA NO ELIMINAR ESTO CHIRSTIAN-->
+<span style="display:none">{{fecha | date : 'yyyy-MM-dd h:mm:ss a' }}</span>
+<span style="display:none">{{fecha | date : 'h:mm:ss a' }}</span>
+<span style="display:none">{{fecha | date : 'shortTime' }}</span>
+<span style="display:none">{{fecha | date : 'shortDate' }}</span> 
+<span style="display:none">{{fecha | date : 'd/M/yy'  }}</span>
