--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+    <nav  id="nav" class="navbar navbar-expand-lg navbar-light bg-light">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -35,5 +35,5 @@
             </form>
         </div>
     </nav>
-</div>
+
 <router-outlet></router-outlet>
