--- a/src/app/dashboard-login-p/dashboard-login-p.component.html
+++ b/src/app/dashboard-login-p/dashboard-login-p.component.html
@@ -31,7 +31,7 @@
           </div>
   </div>
 </div>
-<!--MODAL-->
+<!--MODAL REGISTRO-->
 <ng-template #content let-c="close" let-d="dismiss">
     <div class="modal-header">
       <h4 class="modal-title">Crea tu cuenta</h4>
