--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -22,25 +22,19 @@
       </div>
       <div class="col-md-6 order-md-1 ">
         <h2 class="mb-3">Perfil de Usuario</h2>
-        <form class="needs-validation" novalidate>
+      <!--  <form class="needs-validation" novalidate>-->
           <div class="row">
             <div class="col-md-6 mb-3">
-              <input type="text" class="form-control" id="nombre" placeholder="Nombre" value="" required>
+              <input [(ngModel)]="nombre" type="text" class="form-control" id="nombre" placeholder="Nombre" value="" required>
               <div class="invalid-feedback">
                 Valid first name is required.
               </div>
             </div>
             <div class="col-md-6 mb-3">
-              <input type="text" class="form-control" id="bio" placeholder="Bio" value="" required>
+              <input [(ngModel)]="apellido" type="text" class="form-control" id="bio" placeholder="Apellido" value="" required>
               <div class="invalid-feedback">
                 Valid first name is required.
               </div>
-            </div>
-          </div>
-          <div class="mb-3">
-            <input type="url" class="form-control" id="firstName" placeholder="Website" value="" required>
-            <div class="invalid-feedback">
-              Valid first name is required.
             </div>
           </div>
           <div class="mb-3">
@@ -49,39 +43,30 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text">@</span>
                 </div>
-                <input type="text" class="form-control" id="username disabled" placeholder="Username" required>
+                <input [(ngModel)]="username" type="text" class="form-control" id="username disabled" placeholder="Username" required>
                 <div class="invalid-feedback" style="width: 100%;">
                   Your username is required.
                 </div>
               </div>
             </fieldset>
           </div>
-
           <div class="mb-3">
             <fieldset disabled>
-              <input type="email" class="form-control" id="email" placeholder="you@example.com">
+              <input [(ngModel)]="email" type="email" class="form-control" id="email" placeholder="you@example.com">
               <div class="invalid-feedback">
                 Please enter a valid email address for shipping updates.
               </div>
             </fieldset>
           </div>
           <div class="mb-3">
-            <input type="text" class="form-control" id="firstName" placeholder="Ciudad" value="" required>
+            <input [(ngModel)]="contra" type="text" class="form-control" id="firstName" placeholder="Contraseña" value="" required>
             <div class="invalid-feedback">
               Valid first name is required.
             </div>
           </div>
-          <div class="mb-3">
-            <input type="date" class="form-control" id="firstName" placeholder="Fecha de Nacimiento" value="" required>
-            <div class="invalid-feedback">
-              Valid first name is required.
-            </div>
-          </div>
-
-
           <hr class="mb-4">
-          <button class="btn btn-primary btn-lg btn-block boton1" type="submit">Guardar</button>
-        </form>
+          <button (click)="updateUser()" class="btn btn-primary btn-lg btn-block boton1" type="submit">Guardar</button>
+       <!-- </form>-->
       </div>
     </div>
     
