--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -2,11 +2,38 @@
   <div class="row">
     <div class="col-md-3">
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-12 bgColor">
 
         </div>
-        <div class="col-md-12">
-
+        <div class="col-md-12 bgColor">
+          <div class="container">
+            <div class="row">
+              <div class="input-group-prepend">
+                <h5>Monterrey trends</h5>
+                <p class="leySeca">
+                  Change
+                </p>
+              </div>
+              <div>
+                <p class="leySeca" style="margin: 0%"><font size="3">#LeySeca</font></p>
+                <p style="margin: 0%">
+                  @monterrey is Tweeting about this
+                </p>
+              </div>
+              <div>
+                <p class="leySeca" style="margin: 0%"><font size="3">#LeySeca</font></p>
+                <p style="margin: 0%">
+                  @monterrey is Tweeting about this
+                </p>
+              </div>
+              <div>
+                <p class="leySeca" style="margin: 0%"><font size="3">#LeySeca</font></p>
+                <p style="margin: 0%">
+                  @monterrey is Tweeting about this
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -22,12 +49,20 @@
               <textarea style="width: 100%"></textarea>
               <div class="row">
                 <div>
-                    <span><i class="far fa-image"></i></span>
-                    <span><i class="fas fa-grin-tongue-wink"></i></span>
-                    <span><i class="fas fa-align-left"></i></span>
-                    <span><i class="fas fa-map-marker-alt"></i></span>
+                  <span class="u-borderRadiusInherit">
+                    <i class="far fa-image"></i>
+                  </span>
+                  <span class="u-borderRadiusInherit">
+                    <i class="fas fa-grin-tongue-wink"></i>
+                  </span>
+                  <span class="u-borderRadiusInherit">
+                    <i class="fas fa-align-left"></i>
+                  </span>
+                  <span class="u-borderRadiusInherit">
+                    <i class="fas fa-map-marker-alt"></i>
+                  </span>
                 </div>
-                <div class="col align-self-end">
+                <div class="col align-self-end ">
                   <button>Tweet</button>
                 </div>
               </div>
@@ -35,17 +70,76 @@
 
           </div>
         </div>
-        <div class="col-12">
-          <ol>
-            twts
-          </ol>
+        <div class="col-12 ">
+          <div class="row bgColor ">
+            <ol>
+              twts
+            </ol>
+          </div>
         </div>
       </div>
     </div>
     <div class="col-md-3">
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-12 bgColor">
+          <div class="row">
+            <div class=" col-12 input-group-prepend">
+              <h5>Who to follow</h5>
+              <p class="leySeca">
+              Refresh
+              </p>
+              <p class="leySeca">
+                View all
+              </p>
+            </div>
+            <div class="col-12">
+              <div class="row">
+                <div class="col-3">
+                  <span>
+                    <img src="http://via.placeholder.com/60x60" />
+                  </span>
+                </div>
+                <div class="col-9">
+                  <span>
+                    <h6>Nombre perfil</h6>
+                  </span>
+                </div>
 
+              </div>
+              <hr/>
+              <div class="row">
+                <div class="col-3">
+                  <span>
+                    <img src="http://via.placeholder.com/60x60" />
+                  </span>
+                </div>
+                <div class="col-9">
+                  <span>
+                    <h6>Nombre perfil</h6>
+                  </span>
+
+                </div>
+
+              </div>
+              <hr/>
+
+              <div class="row">
+                <div class="col-3">
+                  <span>
+                    <img src="http://via.placeholder.com/60x60" />
+                  </span>
+                </div>
+                <div class="col-9">
+                  <span>
+                    <h6>Nombre perfil</h6>
+                  </span>
+
+                </div>
+              </div>
+              <hr/>
+              <p class="leySeca">Conect other address books</p>
+            </div>
+          </div>
         </div>
         <div class="col-md-12">
 
