--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -55,9 +55,17 @@
   </div>
 </div>
 
+<button (click)="printTweets()">Tweets</button>
+<!--<span [(ngModel)]="horaT">{{hora | date : 'shortTime' }}</span>
+<span [(ngModel)]="fechaT">{{fecha | date : 'd/M/yy'  }}</span>-->
+
+<!--<input [(ngModel)]="textoT" maxlength="280" type="text" />-->
+<textarea [(ngModel)]="textoT" maxlength="280" cols="30" rows="10"></textarea>
+<button (click)="createTweet()" >Crear tweet</button>
+
 <!--NOTA NO ELIMINAR ESTO CHIRSTIAN-->
-<span style="display:none">{{fecha | date : 'yyyy-MM-dd h:mm:ss a' }}</span>
-<span style="display:none">{{fecha | date : 'h:mm:ss a' }}</span>
-<span style="display:none">{{fecha | date : 'shortTime' }}</span>
-<span style="display:none">{{fecha | date : 'shortDate' }}</span> 
-<span style="display:none">{{fecha | date : 'd/M/yy'  }}</span>
+<!--span >{{fecha | date : 'yyyy-MM-dd h:mm:ss a' }}</span>
+<span >{{hora | date : 'h:mm:ss a' }}</span>
+<span [(ngModel)]="horaT">{{hora | date : 'shortTime' }}</span>
+<span >{{fecha | date : 'shortDate' }}</span> 
+<span [(ngModel)]="fechaT">{{fecha | date : 'd/M/yy'  }}</span>-->
