Se creo el servicio para mostrar datos del usuario y se probaron

--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -149,6 +149,8 @@
   </div>
 </div>
 
+<input [(ngModel)]="nombre" type="text" name="" id="">
+<input [(ngModel)]="username" type="text">
 <button (click)="printTweets()">Tweets</button>
 <textarea [(ngModel)]="textoT" maxlength="280" cols="30" rows="10"></textarea>
 <button (click)="createTweet()" >Crear tweet</button>
