Se Agregan nuevo diseño de feed + librerias

--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -1,157 +1,158 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-3">
-      <div class="row">
-        <div class="col-md-12 bgColor">
+<div class="container-fluid row bgColor">
 
-        </div>
-        <div class="col-md-12 bgColor">
-          <div class="container">
-            <div class="row">
-              <div class="input-group-prepend">
-                <h5>Monterrey trends</h5>
-                <p class="leySeca">
-                  Change
-                </p>
-              </div>
-              <div>
-                <p class="leySeca" style="margin: 0%"><font size="3">#LeySeca</font></p>
-                <p style="margin: 0%">
-                  @monterrey is Tweeting about this
-                </p>
-              </div>
-              <div>
-                <p class="leySeca" style="margin: 0%"><font size="3">#LeySeca</font></p>
-                <p style="margin: 0%">
-                  @monterrey is Tweeting about this
-                </p>
-              </div>
-              <div>
-                <p class="leySeca" style="margin: 0%"><font size="3">#LeySeca</font></p>
-                <p style="margin: 0%">
-                  @monterrey is Tweeting about this
-                </p>
-              </div>
-            </div>
+  <div class="col-lg-3 col-md-12 col-sm-12">
+
+    <div class="card card-profile">
+      <div class="card-header dark-header">
+      </div>
+      <img class="card-img-top profile-img" src="../../assets/img/user.png" alt="Avatar">
+      <div class="card-body profile-body">
+        <h5 class="card-title profile-title">Nombre Usuario</h5>
+        <h6 class="card-subtitle mb-2 text-muted profile-subtitle">@NombreUsuario</h6>
+        <div class="row">
+          <div class="col-4">
+            <small class="text-muted">Tweets</small>
+            <br>
+            <h6 class="title-bold">1</h6>
+          </div>
+          <div class="col-4">
+            <small class="text-muted">Siguiendo</small>
+            <br>
+            <h6 class="title-bold">10</h6>
+          </div>
+          <div class="col-4">
+            <small class="text-muted">Seguidores</small>
+            <br>
+            <h6 class="title-bold">15</h6>
           </div>
         </div>
       </div>
     </div>
-    <div class="col-md-6 justify-content-md-center">
-      <div class="row">
-        <div class="col-12 timeline-tweet-box">
-          <div class=" row tweet-user">
-            <div class="col-1">
-              <img class=" top-timeline-tweet-box-user-image avatar size32" src="https://pbs.twimg.com/profile_images/466949235628187650/XR2OhG_Z_normal.jpeg"
-                alt="Kriztian">
-            </div>
-            <div class="col-11">
-              <textarea style="width: 100%"></textarea>
-              <div class="row">
-                <div>
-                  <span class="u-borderRadiusInherit">
-                    <i class="far fa-image"></i>
-                  </span>
-                  <span class="u-borderRadiusInherit">
-                    <i class="fas fa-grin-tongue-wink"></i>
-                  </span>
-                  <span class="u-borderRadiusInherit">
-                    <i class="fas fa-align-left"></i>
-                  </span>
-                  <span class="u-borderRadiusInherit">
-                    <i class="fas fa-map-marker-alt"></i>
-                  </span>
-                </div>
-                <div class="col align-self-end ">
-                  <button>Tweet</button>
-                </div>
-              </div>
-            </div>
 
-          </div>
+    <div class="card">
+      <h5 class="card-header transparent-header">Tendencias Para Ti •
+        <small class="small-header">Cambiar</small>
+      </h5>
+      <div class="card-body">
+        <div class="trending-panel">
+          <h5 class="card-title trending-title">#MexicoVsBrasil</h5>
+          <h6 class="card-subtitle mb-2 text-muted trending-subtitle">México Busca Hacer Historia en el mundial</h6>
         </div>
-        <div class="col-12 ">
-          <div class="row bgColor ">
-            <ol>
-              twts
-            </ol>
-          </div>
+
+        <div class="trending-panel">
+          <h5 class="card-title trending-title">Paco Memo</h5>
+          <h6 class="card-subtitle mb-2 text-muted trending-subtitle">1.209 Tweets</h6>
         </div>
       </div>
     </div>
-    <div class="col-md-3">
-      <div class="row">
-        <div class="col-md-12 bgColor">
-          <div class="row">
-            <div class=" col-12 input-group-prepend">
-              <h5>Who to follow</h5>
-              <p class="leySeca">
-              Refresh
-              </p>
-              <p class="leySeca">
-                View all
-              </p>
-            </div>
-            <div class="col-12">
-              <div class="row">
-                <div class="col-3">
-                  <span>
-                    <img src="http://via.placeholder.com/60x60" />
-                  </span>
-                </div>
-                <div class="col-9">
-                  <span>
-                    <h6>Nombre perfil</h6>
-                  </span>
-                </div>
 
-              </div>
-              <hr/>
-              <div class="row">
-                <div class="col-3">
-                  <span>
-                    <img src="http://via.placeholder.com/60x60" />
-                  </span>
-                </div>
-                <div class="col-9">
-                  <span>
-                    <h6>Nombre perfil</h6>
-                  </span>
 
-                </div>
-
-              </div>
-              <hr/>
-
-              <div class="row">
-                <div class="col-3">
-                  <span>
-                    <img src="http://via.placeholder.com/60x60" />
-                  </span>
-                </div>
-                <div class="col-9">
-                  <span>
-                    <h6>Nombre perfil</h6>
-                  </span>
-
-                </div>
-              </div>
-              <hr/>
-              <p class="leySeca">Conect other address books</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-12">
-
-        </div>
-      </div>
-    </div>
   </div>
+
+  <div class="col-lg-6 col-md-12 col-sm-12">
+
+    <div id="alertTweet" class="alert alert-light alert-dismissible fade show text-center" role="alert" style="display:none;">
+      Tweet Realizado Con Éxito
+    </div>
+
+    <div class="card card-twit-user">
+      <div class="card-body row">
+        <div class="col-lg-1 col-md-1 col-sm-1">
+          <img class="card-img-top user-twit-img" src="../../assets/img/user.png" alt="Avatar">
+        </div>
+        <div class="col-lg-11 col-md-11 col-sm-11">
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" maxlength="280" placeholder="¿Qué está Pasando?"></textarea>
+          <button type="button" class="btn btn-dark" (click)="ShowAlertTweet()">Twittear</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="card card-all-twits">
+      <div class="card-body body-all-twits">
+        <img class="img-user-twit" src="../../assets/img/user.png" />
+        <div class="user-twit-title">
+          <h6>NombreUsuario
+            <small>@NombreUsuario - 1 Hora</small>
+          </h6>
+          <p class="card-text" style="width: 90%">Tweet de Ejemplo, este es un ejemplo aqui se mostrarán todos los tweets de cada uno de los usaurios de la aplicación.</p>
+          <div class="row">
+            <div class="col-4">
+              <i class="fas fa-heart"></i> 1
+            </div>
+          </div>
+        </div>
+      </div>
+      <hr>
+
+    </div>
+
+  </div>
+
+  <div class="col-lg-3 col-md-12 col-sm-12">
+
+    <div class="card">
+      <h5 class="card-header transparent-header">A quién seguir •
+        <small class="small-header">Actualizar</small>
+      </h5>
+      <div class="card-body">
+
+        <div class="user-list row">
+
+          <div class="col-md-2">
+            <img class="card-img-top user-suggestion-img" src="../../assets/img/user-suggestion.jpg" alt="Suggestion">
+          </div>
+          <div class="col-md-10">
+            <h6>Selección Nacional
+              <i class="fas fa-certificate"></i>
+            </h6>
+            <br>
+            <button type="button" class="btn btn-light">Seguir</button>
+          </div>
+
+        </div>
+
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-body">
+        <p class="card-text publicity-text">
+          © 2018 Twitter
+          <a class="link-footer">Sobre Nosotros</a>
+          <br>
+          <a class="link-footer">Centro de Ayuda </a>
+          <a class="link-footer">Condiciones</a>
+          <br>
+          <a class="link-footer">Política de Privacidad </a>
+          <a class="link-footer">Cookies</a>
+          <br>
+          <a class="link-footer">Información Sobre Anuncios </a>
+          <a class="link-footer">Marca </a>
+          <a class="link-footer">Blog</a>
+          <br>
+          <a class="link-footer">Estado </a>
+          <a class="link-footer">Aplicaciones </a>
+          <a class="link-footer">Empleos </a>
+          <a class="link-footer">Marketing</a>
+          <br>
+          <a class="link-footer">Empresas </a>
+          <a class="link-footer">Desarrolladores</a>
+        </p>
+      </div>
+      <div class="card-footer text-muted">
+        Publicitar en Twitter
+      </div>
+    </div>
+
+  </div>
+
 </div>
+
+
 
 <!--NOTA NO ELIMINAR ESTO CHIRSTIAN-->
 <span style="display:none">{{fecha | date : 'yyyy-MM-dd h:mm:ss a' }}</span>
 <span style="display:none">{{fecha | date : 'h:mm:ss a' }}</span>
 <span style="display:none">{{fecha | date : 'shortTime' }}</span>
-<span style="display:none">{{fecha | date : 'shortDate' }}</span> 
-<span style="display:none">{{fecha | date : 'd/M/yy'  }}</span>
+<span style="display:none">{{fecha | date : 'shortDate' }}</span>
+<span style="display:none">{{fecha | date : 'd/M/yy' }}</span>
