--- a/src/app/feed/feed.component.css
+++ b/src/app/feed/feed.component.css
@@ -1,4 +1,176 @@
-.tweet-user {
+.container-fluid{
+    padding: 20px 0px;
+}
+
+.card{
+    margin: 5px 0px;
+}
+
+.dark-header{
+    background-color: #000000;
+    height: 130px;
+}
+
+.transparent-header{
+    background-color: transparent ;
+    border-bottom: none;
+    font-size: 19px;
+    font-weight: 700;
+}
+
+.small-header{
+    font-size: 12px !important;
+    cursor: pointer;
+}
+
+.small-header:hover{
+    text-decoration: underline;
+}
+
+.user-list{
+    padding: 3px;
+    border-bottom: 1px solid #e6ecf0;
+    padding-bottom: 8px;
+}
+
+.user-suggestion-img{
+    width: 50px;
+    border-radius: 60px;
+    margin-left: -15px;
+}
+
+.profile-img{
+    width: 70px;
+    position: absolute;
+    margin-top: 105px;
+    margin-left: 15px;
+    border: 3px solid white;
+    border-radius: 60px;
+}
+
+.profile-body{
+    margin-top: 20px;
+}
+
+.profile-title{
+    position: relative;
+    margin-top: -30px;
+    margin-left: 70px;
+}
+
+.profile-subtitle{
+    position: relative;
+    margin-left: 70px;
+    font-weight: 100;
+    font-size: 14px;
+}
+
+.title-bold{
+    font-weight: bold;
+}
+
+.trending-title{
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.trending-subtitle{
+    font-size: 13px;
+    margin-top: -13px;
+}
+
+.btn-light{
+    color: #000000;
+    font-size: 12px;
+    border-radius: 100px;
+    box-shadow: none;
+    font-weight: 500;
+    cursor: pointer;
+    font-size: 14px;
+    line-height: 20px;
+    padding: 6px 16px;
+    position: relative;
+    text-align: center;
+    white-space: nowrap;
+    border: 1px solid #000000;
+    margin-top: -30px;
+}
+
+.fa-certificate{
+    color: #1DA1F2;
+}
+
+.publicity-text{
+    font-size: 13px;
+    color: #6c757d!important;
+}
+
+.link-footer:hover{
+    text-decoration: underline !important;
+    cursor: pointer;
+}
+
+.card-twit-user{
+    background-color: #E5E5E5 !important;
+}
+
+.user-twit-img{
+    width: 50px;
+    border-radius: 60px;
+    margin: 0 auto;
+    margin-top: 15px;
+    margin-left: -8px;
+}
+
+.btn-dark{
+    float: right;
+    margin: 15px 0px 0px 0px;
+    border-radius: 100px;
+    font-weight: bold;
+}
+
+.card-all-twits{
+
+}
+
+.body-all-twits{
+    display: -webkit-inline-box;
+    padding-bottom: 0;
+}
+
+.img-user-twit
+{
+    width: 50px;
+}
+
+.user-twit-title{
+    padding: 0px 10px;
+}
+
+.fa-heart{
+    color: #6c757d;
+}
+
+.fa-heart:hover{
+    color: red;
+    cursor: pointer;
+}
+
+.alert{
+    color: #000000;
+    padding: 15px;
+    margin-bottom: 1rem;
+    width: 100%;
+    margin: 0 auto;
+    top: 0;
+    z-index: 16;
+    border: 1px solid #6c757d;
+}
+
+
+
+
+/* .tweet-user {
     border-radius: 2;
     border-top-left-radius: 0px;
     border-top-right-radius: 0px;
@@ -29,8 +201,9 @@
     color: blue;
     font-size: 12px;
 
-}
+} */
 .bgColor {
-    background-color: white;
+    background-color: #E6ECF0;
     margin: 2px;
 }
+
