--- a/src/app/dashboard-login-p/dashboard-login-p.component.css
+++ b/src/app/dashboard-login-p/dashboard-login-p.component.css
@@ -44,7 +44,18 @@
 .EdgeButton--secondary[_ngcontent-c1] {
     background-color: #1da1f2;
     border: 1px solid #1da1f2;
+    border-radius: 50px;
     color: #fff;
+}
+
+.EdgeButton--3[_ngcontent-c1] {
+    background-color: #1da1f2;
+    border: 1px solid #1da1f2;
+    border-radius: 50px;
+    color: #fff;
+    align-items: center;
+    align-content: center;
+    align-self: center;
 }
 
 .EdgeButton--small {
@@ -62,30 +73,49 @@
 .cssA{
     margin-right: 5px;
 }
-.py-3 {
-    /* padding-bottom: 1rem!important; */
-}
 
 .cssD{
-    padding: 155px;
+    height: 700px;
+    padding: 200px;
     color: white;
-    /* text-align: center; */
-    font-size: 1em;
-    font-family: fantasy;
+    font-size: 15px;
+    text-align: center;   
 }
 
-h4 {
+.h4 {
     font-size: 2rem;
 }
 
 .cssDCon{
-    width: 60%;
+    width: 55%;
     margin-top: 70px;
 }
 
 .cssIconT{
-    color: blue;
-    width: 70px;
-    height: 50px;
+    color: #1da1f2;
+    justify-content: center;
+    align-self: center;
+    font-size: 50px;
     margin-bottom: 20px;
+}
+.smallGris{ color: #66757f;}
+
+.inputTam{
+    height: 32px;
+}
+
+.modal-header{
+    text-justify: inherit;
+    text-align: center;
+    align-content: center;
+    background: #1da1f2;
+    color: white;
+}
+
+.x{ color: white }
+
+.boton1 {
+    border: 0rem;
+    border-radius: 50px;
+    background-color: #55ACEE;
 }
