Se modifico la estructura de los componentes

--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -149,6 +149,7 @@
   </div>
 </div>
 
+<!--JAIR DE AQUI TOMA PARA LA IMPLEMENTACION-->
 <input [(ngModel)]="nombre" type="text" name="" id="">
 <input [(ngModel)]="username" type="text">
 <button (click)="printTweets()">Tweets</button>
